src/z80asm/z80asm2/t/40-syntax/expected/ds_string_01.txt
% z88dk-z80asm -v -dump-after-parse t/40-syntax//input/ds_string_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/40-syntax/input/ds_string_01.asm...
t/40-syntax/input/ds_string_01.asm:1:1: error: Unterminated expression after "ds"
    ds
    ^
t/40-syntax/input/ds_string_01.asm:2:1: error: Unterminated expression after "ds"
    ds ,
    ^
t/40-syntax/input/ds_string_01.asm:3:13: error: Unexpected token: ","
    ds 1,"hello",
                ^
Program
    DefsStringStmt
        Location: t/40-syntax/input/ds_string_01.asm:4:1
        Size:
            ExprBinary: +
                LHS:
                    ExprLiteralInt: 1
                RHS:
                    ExprBinary: *
                        LHS:
                            ExprLiteralInt: 2
                        RHS:
                            ExprLiteralInt: 3
        String literal: "hello"
        Filler byte: 0
